# SwiftForge

./: .git-workflow.md  .gitignore  AGENTS.md  Cargo.toml  README.md  test-results.json
docs/: README.md  architecture-analysis.md  tui-refactor-bug-analysis.md  tui-refactor-bug-report.md  tui-refactor-implementation.md
docs/architecture/: 2026-05-20-interface-specification.md  2026-05-20-platform-architecture.md  2026-05-23-architecture-tasks.md  2026-05-23-platform-architecture.md  2026-06-09-tui-message-display-architecture.md
docs/records/bugs/: bug-2026-05-26-streaming-pipeline-analysis.md  bug-2026-05-26-streaming-pipeline-architecture.md  bug-2026-05-28-debug-logging-and-streaming-pipeline.md
docs/specs/: 2026-05-20-tui-architecture-design.md  2026-05-22-logging-refactoring-design.md  2026-05-23-mcp-tool-unified-design.md  2026-05-23-session-management-design.md  2026-05-25-tui-message-display-design.md  2026-05-27-tui-state-machine-design.md  2026-05-27-tui-state-machine-plan-phase1.md  2026-05-28-library-refactor-design.md  2026-05-28-library-refactor-implementation-plan.md  2026-05-29-deepseek-api-reference.md  2026-05-29-provider-library-refactor-plan-impl.md  2026-05-29-provider-library-refactor-plan.md  2026-06-01-mcp-tool-unified-implementation-plan.md  2026-06-02-reasoning-content-handling-design.md  2026-06-02-session-management-implementation-plan.md  2026-06-04-scripted-testing-framework-design.md  2026-06-04-testing-catalog.md
docs/standards/: 2026-05-20-documentation-system-spec.md
docs/superpowers/architecture/: tui-message-display-architecture.md
docs/superpowers/plans/: 2026-05-04-rust-agent-platform-phase1.md  2026-05-31-swiftforge-log-implementation.md  2026-06-08-message-display-format-fix.md  2026-06-08-structured-block-rendering.md  2026-06-08-tui-streaming-pipeline-fix.md
docs/superpowers/specs/: 2026-05-18-deepseek-streaming-spec.md
libs/swiftforge-hooks/: Cargo.toml
libs/swiftforge-hooks/src/: lib.rs  registry.rs  types.rs
libs/swiftforge-log/: Cargo.toml  README.md
libs/swiftforge-log/src/: formater.rs  level.rs  lib.rs  macro_def.rs  writer.rs
libs/swiftforge-mcp/: Cargo.toml  README.md
libs/swiftforge-mcp/docs/: 2026-05-23-mcp-tool-unified-design.md  2026-06-01-mcp-tool-unified-architecture-design.md
libs/swiftforge-mcp/src/: adapter.rs  client.rs  lib.rs  loader.rs  pool.rs  protocol.rs
libs/swiftforge-provider-core/: Cargo.toml  README.md
libs/swiftforge-provider-core/src/: error.rs  lib.rs  registry.rs  traits.rs
libs/swiftforge-providers/: Cargo.toml  README.md
libs/swiftforge-providers/src/: anthropic.rs  custom.rs  deepseek.rs  lib.rs  minimax.rs  ollama.rs  openai.rs  utils.rs
libs/swiftforge-skill/: Cargo.toml
libs/swiftforge-skill/src/: lib.rs  loader.rs  registry.rs
libs/swiftforge-task/: Cargo.toml
libs/swiftforge-task/src/: lib.rs  message_bus.rs  scheduler.rs  session_db.rs
libs/swiftforge-tools/: Cargo.toml
libs/swiftforge-tools/src/: bash.rs  edit.rs  grep.rs  lib.rs  (+3 more)
libs/swiftforge-types/: Cargo.toml  README.md
rust-agent-platform/: Cargo.toml
rust-agent-platform/src/: lib.rs  main.rs
rust-agent-platform/src/core/: agent.rs  mod.rs  provider.rs  session.rs  tool.rs
rust-agent-platform/src/integration/mcp/: client.rs  mod.rs  protocol.rs
rust-agent-platform/src/orchestration/: agent.rs  message_bus.rs  mod.rs  scheduler.rs
rust-agent-platform/src/platform/: boulder.rs  category.rs  intent_gate.rs  mod.rs
rust-agent-platform/src/platform/hooks/: mod.rs  registry.rs  types.rs
rust-agent-platform/src/platform/skill/: loader.rs  mod.rs  registry.rs
rust-agent-platform/src/providers/: anthropic.rs  custom.rs  deepseek.rs  minimax.rs  mod.rs  ollama.rs  openai.rs
rust-agent-platform/src/tools/: bash.rs  edit.rs  grep.rs  mod.rs  read.rs  write.rs
rust-agent-platform/src/tui/: app.rs  app_controller.rs  components.rs  mod.rs
rust-agent-platform/src/tui/state/: action.rs  app_context.rs  mod.rs  view_state.rs
rust-agent-platform/src/tui/task/: agent_task.rs  coordinator.rs  events.rs  mod.rs
rust-agent-platform/src/tui/views/: chat_view.rs  config_view.rs  debug_view.rs  view.rs
rust-agent-platform/tests/: boulder_test.rs  core_test.rs  e2e_test.rs  hook_test.rs  mcp_test.rs  provider_test.rs  tool_test.rs
swiftforge/: Cargo.toml
swiftforge/src/: lib.rs  main.rs
swiftforge/src/core/: agent.rs  mod.rs  session_db.rs  session_manager.rs
swiftforge/src/platform/: boulder_db.rs  mod.rs
swiftforge/src/providers/: deepseek.rs
swiftforge/src/tui/: app_controller.rs  config.rs  initializer.rs  input.rs  mod.rs
swiftforge/src/tui/components/: message_list.rs
swiftforge/src/tui/state/: action.rs  app_context.rs  mod.rs  view_state.rs
swiftforge/src/tui/task/: README.md  agent_task.rs  coordinator.rs  events.rs  mod.rs
swiftforge/src/tui/task/docs/: 2026-05-27-tui-state-machine-plan-phase2.md
swiftforge/src/tui/views/: chat_view.rs  debug_view.rs  mod.rs  view.rs
swiftforge/tests/: chat_view_test.rs  config_view_test.rs  core_test.rs  e2e_test.rs  hook_test.rs  intent_test.rs  mcp_test.rs  orchestration_test.rs  skill_test.rs  task_coordinator_test.rs  tool_test.rs  tui_config_test.rs  tui_state_test.rs
swiftforge/tests/runner/: Cargo.toml
swiftforge/tests/runner/src/: context.rs  executor.rs  lib.rs  main.rs  parser.rs  verifier.rs
swiftforge/tests/runner/src/reporters/: mod.rs
swiftforge/tests/scripts/agent/: basic_chat.yaml  multi_turn.yaml  tool_execution.yaml  tool_parsing.yaml
swiftforge/tests/scripts/hooks/: hook_dispatch.yaml
swiftforge/tests/scripts/mcp/: mcp_client.yaml
swiftforge/tests/scripts/orchestration/: message_bus.yaml  scheduler.yaml
swiftforge/tests/scripts/provider/: anthropic_chat.yaml  deepseek_chat.yaml  openai_chat.yaml  openai_streaming.yaml
swiftforge/tests/scripts/skill/: skill_loading.yaml
swiftforge/tests/scripts/tools/: bash_tool.yaml  file_tools.yaml  grep_tool.yaml
swiftforge/tests/scripts/tui/: chat_interface.yaml  multi_turn_conversation.yaml  streaming_response.yaml  tool_integration.yaml
(+5 files in other folders)
