[workspace]
members = [
    "libs/swiftforge-types",
    "libs/swiftforge-task",
    "libs/swiftforge-tools",
    "libs/swiftforge-mcp",
    "libs/swiftforge-hooks",
    "libs/swiftforge-skill",
    "swiftforge",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Developer <dev@example.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }