[package]
name = "rust-agent-platform"
version.workspace = true
edition.workspace = true

[lib]
name = "rust_agent_platform"
path = "src/lib.rs"

[[bin]]
name = "ragent"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender = "0.2"
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true

ratatui = "0.26"
crossterm = "0.27"
pulldown-cmark = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
dirs = "5"
regex = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }