[package]
name = "swiftforge-mcp"
version.workspace = true
edition.workspace = true

[dependencies]
swiftforge-types = { path = "../swiftforge-types" }
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tracing.workspace = true