[package]
name = "swiftforge-providers"
version.workspace = true
edition.workspace = true

[dependencies]
swiftforge-provider-core = { path = "../swiftforge-provider-core" }
swiftforge-types = { path = "../swiftforge-types" }

async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio-stream = "0.1"
serde_json = "1"
chrono = "0.4"
anyhow = "1"